--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@
 # AndroidX migration is complete, using legacy support libraries
 android.useAndroidX=false
 android.enableJetifier=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
