--- a/gradle.properties
+++ b/gradle.properties
@@ -22,17 +22,17 @@
 # Example: export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
 # org.gradle.java.home=/usr/lib/jvm/temurin-8-jdk-amd64
 # AndroidX migration is complete, using legacy support libraries
-android.useAndroidX=false
+android.useAndroidX=true
 android.enableJetifier=false
 android.nonTransitiveRClass=false
-android.nonFinalResIds=false
-android.defaults.buildfeatures.resvalues=true
-android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
-android.enableAppCompileTimeRClass=false
-android.usesSdkInManifest.disallowed=false
+android.nonFinalResIds=true
+android.defaults.buildfeatures.resvalues=false
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=true
+android.enableAppCompileTimeRClass=true
+android.usesSdkInManifest.disallowed=true
 android.uniquePackageNames=false
 android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
-android.r8.optimizedResourceShrinking=false
-android.builtInKotlin=false
-android.newDsl=false
+android.r8.optimizedResourceShrinking=true
+android.builtInKotlin=true
+android.newDsl=true
